feat: add Redis caching for project, user, epic, and task; downgrade Spring Boot to v3